# shvid

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeListsDocker.txt  Dockerfile  LICENSE  Makefile  cmake_install.cmake  install_manifest.txt  main.c  readme.md  thumbnail.pgm
core/: filters.c  filters.h  info.c  info.h  tools.c  tools.h
helpers/: cmd_helpers.c  cmd_helpers.h  file_helpers.c  file_helpers.h
shell/: args.c  args.h  shell.c  shell.h
